src/deploy/kubernetes/example/country-service/application/templates/service.yml
kind: Service
apiVersion: v1
metadata:
  name: country-service-application
spec:
  selector:
    app: country-service-application
  type: ClusterIP #NodePort
  ports:
    - port: 50100
      #      nodePort: 30900
      targetPort: http
      protocol: TCP
      name: http
