src/deploy/kubernetes/example/country-service/application/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: country-service-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^(/country)$ $1/ redirect; #Redirect if traling slash is missing
    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret

spec:
  tls:
    - hosts:
        - goafabric.org
      secretName: server-certificate-secret
  rules:
    - host: goafabric.org
      http:
        paths:
          - path: /country(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: country-service-application
                port:
                  number: 50100
